k8s/dp_shmelkov.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-dp
  labels:
    app: kuber-dp
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
      - name: kuber-app
        image: eshmelkov/otus_microservice:healthapp
        ports:
        - containerPort: 8000
