k8s/service_shmelkov.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
  labels:
    app: kuber-dp
spec:
  selector:
    env: prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
